--- a/package.json
+++ b/package.json
@@ -4,25 +4,30 @@
   "description": "",
   "main": "index.js",
   "engine": {
-    "node":"v13.12.0",
-    "npm":"6.14.4"
+    "node": "v13.12.0",
+    "npm": "6.14.4"
   },
   "scripts": {
     "start": "node server/index.js",
-    "backend": "nodemon server/index.js"
+    "backend": "nodemon server/index.js",
+    "frontend": "npm run start --prefix client",
+    "dev": "concurrently \"npm run backend\" \"npm run start --prefix client\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
+    "concurrently": "^5.1.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.9"
   },
   "devDependencies": {
+    "http-proxy-middleware": "^1.0.3",
     "nodemon": "^2.0.3"
   }
 }
